# Data-Structure

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/.data/: 1.-Memoria.cpp  2.-ListaVector.cpp  3.-ListaPuntero.cpp  4.-ListaSimuladorMemoria.cpp
src/1.-Memoria/: UCSMemoria.cpp
src/1.-UCSMemoria/: CSMemoria.cpp  CSMemoria.h
src/2.-Lista/: UListaPuntero.cpp  UListaSM.cpp  UListaSM.h  UListaVector.cpp  UListaVector.h
src/2.-ULista/: ListaPuntero.cpp  ListaSM.cpp  ListaSM.h  ListaVector.cpp  ListaVector.h
src/3.-Polinomio/: PolinomioLista.cpp  PolinomioLista.h  PolinomioPuntero.cpp  PolinomioPuntero.h  PolinomioSM.cpp  PolinomioSM.h  PolinomioVector.cpp  PolinomioVector.h  UPolinomioLista.cpp  UPolinomioPuntero.cpp  UPolinomioPuntero.h  UPolinomioSM.cpp  UPolinomioVector.cpp
src/3.-UPolinomio/: PolinomioLista.h  PolinomioSM.h  PolinomioVector.cpp  PolinomioVector.h
src/4.-Conjunto/: UConjuntoLista.cpp  UConjuntoLista.h  UConjuntoPuntero.cpp  UConjuntoPuntero.h  UConjuntoSM.cpp  UConjuntoSM.h  UConjuntoVector.cpp  UConjuntoVector.h
src/4.-UConjunto/: ConjuntoLista.cpp  ConjuntoLista.h  ConjuntoPuntero.cpp  ConjuntoPuntero.h  ConjuntoSM.cpp  ConjuntoSM.h  ConjuntoVector.h
src/5.-UMatrizDispersa/: MatrizDispersaCSR.cpp  MatrizDispersaCSR.h  MatrizDispersaPuntero.cpp  MatrizDispersaPuntero.h  MatrizDispersaPunteroDoble.cpp  MatrizDispersaPunteroDoble.h  MatrizDispersaSM.cpp  MatrizDispersaSM.h  MatrizDispersaSMDoble.cpp  MatrizDispersaSMDoble.h  MatrizDispersaVector.cpp  MatrizDispersaVector.h
src/UCSMemoria/: CSMemoria.cpp  CSMemoria.h
src/UCola/: ColaGenerica.cpp  ColaGenerica.h  ColaLista.cpp  ColaLista.h  ColaPuntero.cpp  ColaPuntero.h  ColaSM.cpp  ColaSM.h  ColaVectorV1.cpp  ColaVectorV1.h  ColaVectorV2.cpp  ColaVectorV2.h  ColaVectorV3.cpp  ColaVectorV3.h
src/UColaPrioridad/: ColaPrioridad.cpp  ColaPrioridad.h
src/UConjunto/: ConjuntoLista.cpp  ConjuntoLista.h  ConjuntoPuntero.cpp  ConjuntoPuntero.h  ConjuntoSM.cpp  ConjuntoSM.h  ConjuntoVector.cpp  ConjuntoVector.h
src/ULista/: ListaPuntero.cpp  ListaPuntero.h  ListaSM.cpp  ListaSM.h  ListaVector.cpp  ListaVector.h
src/UMatrizDispersa/: MatrizDispersaCSR.cpp  MatrizDispersaCSR.h  MatrizDispersaPuntero.cpp  MatrizDispersaPuntero.h  MatrizDispersaPunteroDoble.cpp  MatrizDispersaPunteroDoble.h  MatrizDispersaSM.cpp  MatrizDispersaSM.h  MatrizDispersaSMDoble.cpp  MatrizDispersaSMDoble.h  MatrizDispersaVector.cpp  MatrizDispersaVector.h
src/UPila/: PIlaVector.cpp  PilaCadena.cpp  PilaCadena.h  PilaEntero.cpp  PilaEntero.h  PilaGenerica.cpp  PilaGenerica.h  PilaLista.cpp  PilaLista.h  PilaPuntero.cpp  PilaPuntero.h  PilaSM.cpp  PilaSM.h  PilaVector.h
src/UPolinomio/: PolinomioLista.cpp  PolinomioLista.h  PolinomioPuntero.cpp  PolinomioPuntero.h  PolinomioSM.cpp  PolinomioSM.h  PolinomioVector.cpp  PolinomioVector.h
src/lib/: UCSMemoria.cpp  UCSMemoria.h  UListaMemoria.cpp  UListaMemoria.h  UListaPuntero.cpp  UListaPuntero.h  UListaSM.cpp  UListaSM.h  UListaVector.cpp  UListaVector.h  UMemoria.cpp  UMemoria.h
